# alex

./: .gitignore  README.md  README_about_enterprise.md  README_destroy_terraform.md  Update_for_8_enterprise.md  prompt_fix_for_4_researcher.md  prompt_for_session.md  prompt_for_session_codegraph.md  prompt_readme_backend.md  prompt_readme_terraform.md
.superpowers/sdd/: task-1-report.md  task-4-report.md
DATN/: ALEX_PRODUCTION_ARCHITECTURE_TRANSFER.md  DOCUMENTATION_PRICE_IS_RIGHT.md  DOCUMENTATION_SEARCHKEY.md  PROMPT_NEW_SESSION_APPLY_ALEX_TRANSFER_TO_DATN.md  Project_Development_Plan.md
backend/api/: README.md  main.py  pyproject.toml
backend/charter/: README.md  agent.py  lambda_handler.py  observability.py  package_docker.py  test_full.py  test_simple.py
backend/database/: README.md  reset_db.py  run_migrations.py  seed_data.py  test_data_api.py  verify_database.py
backend/ingest/: README.md  cleanup_s3vectors.py  ingest_s3vectors.py  package.py  pyproject.toml  search_s3vectors.py  test_ingest_s3vectors.py  test_search_s3vectors.py
backend/planner/: README.md  agent.py  lambda_handler.py  observability.py  package_docker.py  test_full.py  test_simple.py
backend/reporter/: README.md  agent.py  judge.py  lambda_handler.py  observability.py  package_docker.py  templates.py  test_full.py  test_simple.py
backend/researcher/: BUG_AND_FIX.md  Dockerfile  OBSERVABILITY_AND_BENCHMARK_SPEC.md  README.md  build_local.sh  context.py  deploy.py  mcp_servers.py  pyproject.toml  server.py  session_handoff.md  test_local.py  test_research.py  tools.py
backend/retirement/: README.md  agent.py  lambda_handler.py  observability.py  package_docker.py  test_full.py  test_simple.py
backend/shared/: pyproject.toml
frontend/: Bug_7_Frontend.md  README.md  package-lock.json  package.json
guides/: 6_agents.md
scripts/: README.md  deploy.py  run_local.py
(+60 files in other folders)
