# File cấu hình này định nghĩa backend/ingest như một uv project độc lập.
# Mục đích của file là khai báo version Python tối thiểu và các dependency cần thiết.
# Nhờ đó các script package/test/search/cleanup có thể chạy ổn định ở local.
# Đồng thời đây cũng là nguồn dependencies để script package.py gom vào Lambda zip.
[project]
# Bắt đầu bảng cấu hình project theo chuẩn pyproject.toml.
name = "lambda"
# Đặt tên project ngắn gọn cho môi trường uv của thư mục này.
version = "0.1.0"
# Gán version nội bộ cho package local này.
requires-python = ">=3.12"
# Khóa phiên bản Python tối thiểu để bảo đảm tương thích với runtime Lambda hiện dùng.
# Danh sách dependency phản ánh toàn bộ nhu cầu của thư mục này:
# - boto3: giao tiếp với SageMaker, S3 Vectors và các dịch vụ AWS,
# - python-dotenv: đọc cấu hình local từ .env,
# - tenacity: phục vụ retry nếu sau này cần tăng độ bền,
# - requests và requests-aws4auth / opensearch-py có thể đến từ nhánh triển khai cũ hoặc công cụ hỗ trợ khác.
dependencies = [
    # Bắt đầu mảng dependency sẽ được uv cài vào .venv.
    "boto3>=1.40.1",
    # boto3 là SDK AWS chính dùng cho SageMaker và S3 Vectors.
    "opensearch-py>=3.0.0",
    # opensearch-py hiện chưa thấy dùng trực tiếp trong file core của Part 3 nhưng vẫn đang được giữ trong project.
    "requests-aws4auth>=1.3.1",
    # requests-aws4auth hỗ trợ ký request AWS SigV4 nếu sau này cần gọi service theo HTTP trực tiếp.
    "requests>=2.31.0",
    # requests là thư viện HTTP nền tảng cho các tác vụ web đơn giản.
    "python-dotenv>=1.0.0",
    # python-dotenv cho phép nạp biến môi trường từ file .env khi chạy local.
    "tenacity>=9.1.2",
    # tenacity phục vụ retry/backoff khi muốn làm script resilient hơn.
]
# Kết thúc danh sách dependency của uv project này.
